Resolves: tdf#127033 use UI font for spell checking widget

Change-Id: I18e0459bf16ee69860b7dcc8c5ecc75a7805fe13
Reviewed-on: https://gerrit.libreoffice.org/78634
Tested-by: Jenkins
Reviewed-by: Adolfo Jayme Barrientos <fitojb@ubuntu.com>